# cookiecutter-pypackage

./: .gitignore  .travis.yml  README.rst  cookiecutter.json  setup.cfg
{{cookiecutter.project_slug}}/: .travis.yml  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: index.md  installation.md
