[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:src/{{ cookiecutter.project_slug }}/__init__.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"
