[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }}" <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
{%- if cookiecutter.command_line_interface|lower == 'click' %}
Click = "^7.0"
{%- endif %}

[tool.poetry.dev-dependencies]
bumpversion == "^0.5.3"
wheel == "^0.32.1"
watchdog == "^0.9.0"
flake8 == "^3.5.0"
tox == "^3.5.2"
coverage == "^4.5.1"
Sphinx == "^1.8.1"
twine == "^1.12.1"
{% if cookiecutter.command_line_interface == 'y' -%}
click == "^6.7"{% endif %}
{% if cookiecutter.use_pytest == 'y' -%}
pytest == "^3.8.2"
pytest-runner == "^4.2"{% endif %}
black = {version = "^19.3b0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
