[tool.black]
line-length = 88
target_version = ['py37']

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.7
{%- if cookiecutter.command_line_interface|lower == 'click' %}
Click = "^7.0"
{%- endif %}

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
coverage = "^4.5"
mkdocs = "^1.0"
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "^4.5"
pytest-runner = "^4.4"{% endif %}
black = {version = "^19.3b0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
